# minimal-cmake

./: CMakeLists.txt  build.sh  clean.sh  run.sh
app/: CMakeLists.txt
app/include/: LibMath.h
app/src/: main.cpp
math/: CMakeLists.txt
math/include/: LibMath.h
math/src/: LibMath.cpp  Math.cpp
